# tanzubench

./: .env.example  .gitignore  CLAUDE.md  README.md  RESULTS.md  bench.sh
.github/workflows/: ci.yml
docs/: agentic-harness.md  deployment.md  judge-setup.md  test-suite.md
schema/: result-v2.schema.json  test-v1.schema.json
tests/agentic/: agentic-add-failing-test.yaml  agentic-add-feature-with-tests.yaml  agentic-cli-integration.yaml  agentic-debug-import-chain.yaml  agentic-fix-null-deref.yaml  agentic-fix-test-not-code.yaml  agentic-multi-language.yaml  agentic-rename-function.yaml  agentic-repo-api-versioning.yaml  agentic-repo-config-migration.yaml  agentic-repo-flask-bug.yaml  agentic-repo-refactor-extract.yaml
tests/agentic/fixtures/repo-config-migration/: pyproject.toml
tests/agentic/fixtures/repo-config-migration/.git-seed/: index
tests/agentic/fixtures/repo-config-migration/.git-seed/logs/: HEAD
tests/agentic/fixtures/repo-config-migration/.git-seed/refs/heads/: main
tests/agentic/fixtures/repo-config-migration/myapp/: config.py  handlers.py  server.py
tests/agentic/fixtures/repo-config-migration/tests/: test_config.py  test_server.py
tile/: README.md  tile-history.yml
tools/: bench_suite.py  bosh_tunnel.sh  compare-results.py  format-results.py  sandbox_runner.js  sandbox_runner.py  test_bench_suite.py  test_graders.py  validate.py
web/: .eslintrc.json  .gitignore  manifest.yml  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
web/app/: page.tsx  (+3 more)
(+332 files in other folders)
